--- a/docs/StoryCreatorRequirements copy.tex
+++ b/docs/StoryCreatorRequirements copy.tex
@@ -1,4 +1,4 @@
-%@author Brandon Roberts
+%@author Brandon Roberts, Nate Olderman, Billy Rathje, DJ Maguddayao, Kyle Dybdal
 %@date 9/23/13
 
 \documentclass[12pt]{article}
@@ -24,12 +24,12 @@
 %ABSTRACT/SUMMARY
 %-------------------------------------------------------------------------------------------------------------
 \section{Summary}
-<<<<<<< HEAD
-This SRS describes the requirements and specifications for the Story Creator module of the Edith software, a system to help younger students learn to program. The Story Creator module is used to combines the Sharing Framework, Object Creator, Visual Editor and Animation module in order to create a holistic view of Edith.  
+%<<<<<<< HEAD
+This SRS describes the requirements and specifications for the Story Creator module of the Edith software, a system to help younger students learn to program. The Story Creator module is used to combines the Sharing Framework, Object Creator, Visual Editor and Animation module in order to create a holistic view of Edith.  \\
 
-=======
+======= \\ \\
 This SRS describes the requirements and specifications for the Story Creator module of the Edith software, a system to help younger students learn to program.
->>>>>>> 6fb1a11d9f7c7250a22a8bd7a9fcde25dff6c0f6
+%>>>>>>> 6fb1a11d9f7c7250a22a8bd7a9fcde25dff6c0f6
 
 %-------------------------------------------------------------------------------------------------------------
 %INTRODUCTION
@@ -269,7 +269,7 @@ This SRS describes the requirements and specifications for the Story Creator mod
 
 \begin{figure}[ht!]
 \centering
-\includegraphics[width=200mm]{FlowChart.png}
+\includegraphics[width=200mm]{Story Creator FlowChart.png}
 \caption{Use Case Diagram}
 \label{overflow}
 \end{figure}
