--- a/Animation System Intermediate Report Z edit.tex
+++ b/Animation System Intermediate Report Z edit.tex
@@ -77,7 +77,11 @@ One of the components of the "Edith" system, a 2D web-based computer science tea
 \item The Frame Array subsystem simply holds a list of frames, each frame being one step of the animation process. These will be stored in an array so that input from buttons (done by another team) will allow the user to select a time to view from, and the frame array can then grab the necessary frames and display them. 
 \end{enumerate}
 
+\item Interactions
 \begin{enumerate}
+\item The animation system will have no direct interaction with the user; it is a part of the abstraction process we are doing on the animation to make it easier to do simple animations. Therefore, we have no mock-up of our end product, as it is reliant on the canvas created for us as well as buttons and other UI aspects we are not dealing with.
+\item The Animation System interacts with the Story Creator module, who feeds us the JSON instructions to be parsed and carried out. It also interacts with the visual editor team, which will be providing the images, sounds, etc. to be used following the JSON instructions. Finally, we will be giving our output to the (some other team here) to be painted on the canvas.
+\item The only other requirement for the Animation system is that we are using a 3rd party library, 'OCanvas', to make animations easier (and cooler!). This library works directly with an HTML5 canvas, so there are minimal if any changes from other teams.
 
 \end{enumerate}
 
