Revert "Very minor changes"
This reverts commit 6fb1a11d9f7c7250a22a8bd7a9fcde25dff6c0f6.

--- a/StoryCreatorRequirements copy.tex
+++ b/StoryCreatorRequirements copy.tex
@@ -23,7 +23,8 @@
 %ABSTRACT/SUMMARY
 %-------------------------------------------------------------------------------------------------------------
 \section{Summary}
-This SRS describes the requirements and specifications for the Story Creator module of the Edith software, a system to help younger students learn to program.
+This SRS describes the requirements and specifications for the Story Creator module of the edith software, a system to help younger students learn to program. 
+
 
 %-------------------------------------------------------------------------------------------------------------
 %INTRODUCTION
