Adds Gantt Chart
This is a very basic Gantt chart taking us from when the Req. Doc was
due to the due date of the final product.

--- a/StoryCreator_IntermediateReport.tex
+++ b/StoryCreator_IntermediateReport.tex
@@ -74,7 +74,18 @@ The Story Creator module will implement an interface for the Visual Editor modul
 %----------------------------------------------------------------------------------------------------
 \section{Project Status}
 
+\begin{figure}[ht!]
+\centering
+\includegraphics{GanttChart.png}
+\caption{Gantt Chart}
+\label{overflow}
+\end{figure}
+
 Nothing..........
+
+
+
+
 %------------------------------------------------------------------------------------------------------
 %
 %----------------------------------------------------------------------------------------------------
