--- a/Animation System Intermediate Report Z edit.tex
+++ b/Animation System Intermediate Report Z edit.tex
@@ -22,40 +22,6 @@
 	\end{center}
 \end{titlepage}
 
-% Next page
-
-%%Executive Summary
-%\section{\emph{Class Design and Interaction}}
-%One of the components of the ``Edith" system, a 2D web-based computer science teaching tool, is the Animation System. The Animation System module is important because it includes the core animation frameworks and specifications of how the animations and audio will be produced. In a visually-based programming environment, this module is clearly important because it provides animations without requiring the user to have any knowledge of a scripting language or computer graphics concepts. There are two use cases for this module: creating new media and navigating existing media. The media is specified by a different sub-system which delivers the instructions to the Animation System module. The Animation System processes the instructions (assuming the instructions are delivered correctly) and delivers the animations to another sub-system to be displayed on the screen as desired.
-%
-%
-%%Design Specification
-%\section{\emph{Design Specification}}%Create a section for the introduction
-%	
-%	\subsection{Purpose}
-%        The Animation Module allows the user to render animations without knowledge of a scripting language. This is possible by applying pre-defined animation sets to image sprites. The module also allows the user to include audio with their animations. The module is intended to interpret animation instructions and render an animation sequence.
-%
-%% Use Cases
-%\section{\emph{Functional Requirements}}
-%	\subsection{``Use Case 1: Create Media"}
-%\begin{enumerate}
-%  \item Actor
-%  \begin{enumerate}
-%  		 \item ``Taker": The Edith sub-system that takes and displays our media.
-%       \item ``Programmer": The individual who is using Edith through his/her web browser to learn how to program.
-%  \end{enumerate}
-%  
-%
-%
-%  \subsection{``Use Case 2: Navigate Existing Media"}
-%\begin{enumerate}
-%  \item Actor
-%  \begin{enumerate}
-%      \item ``Drawer": The Edith sub-system providing us with sprites to animate and a list of media creation instructions.
-%      \item ``Programmer": The individual who is using Edith through his/her web browser to learn how to program.
-%  \end{enumerate}
-%  \end{enumerate}
-
 \section{\emph{Animation System Structure}}%Create a section for the introduction
 \begin{enumerate}
 \item Parser
@@ -87,8 +53,12 @@
 
 
 
-  \end{enumerate}
+\end{enumerate}
 
+\subsection{Activity Diagram}
+\includegraphics[scale=.45]{AnimationUMLClassDiagram.png}
+\\UML Class Diagram
+\pagebreak
 
 %Glossary/References
 \section{\emph{Glossary/References}}
